# research-agents

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  topics.yaml
.devcontainer/: Dockerfile  devcontainer.json  init-firewall.sh
.github/workflows/: ci.yml
examples/: model-context-protocol-explained.md
prompts/: README.md  default.md
research_agents/: agent.py  config.py  ingest.py  prompts.py  remote_prompts.py  schemas.py  sinks.py
scripts/: manual-poll.sh
tests/: test_agent.py  test_config.py  test_prompts.py  test_schemas.py  test_sinks.py
