[project]
name = "research-agents"
version = "0.1.0"
description = "A minimal LangChain + Tavily research-agent pipeline: topic in, cited Markdown article out"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langgraph>=0.4",
    "langchain-anthropic>=0.3",
    "langchain-tavily>=0.2",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[tool.uv]
# Plain script project — no build/install of the project itself, just the venv.
package = false
