[project]
name = "research-agents"
version = "0.1.0"
description = "A minimal LangChain + Tavily research-agent pipeline: topic in, cited Markdown article out"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langgraph>=0.4",
    "langchain-anthropic>=0.3",
    "langchain-tavily>=0.2",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Extra model providers (Anthropic is included by default). Install the one you
# want, e.g. `uv sync --extra openai`; init_chat_model imports it lazily.
openai = ["langchain-openai>=0.2"]
google = ["langchain-google-genai>=2.0"]
ollama = ["langchain-ollama>=0.2"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.uv]
# Plain script project — no build/install of the project itself, just the venv.
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# defaults (pyflakes + a slice of pycodestyle) plus import sorting
extend-select = ["I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# The project isn't installed (package = false), so put the repo root on the
# path for `import research_agents`.
pythonpath = ["."]
